# rodeonow-webapp

./: .firebaserc  .gitignore  README.md  package-lock.json  package.json  stylelint.config.js  vue.config.js
.github/workflows/: firebase-deploy-pr.yml  firebase-hosting-PR.yml  firebase-hosting-merge-main.yml  firebase-hosting-merge-release.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
node-api/: README.md  package-lock.json  package.json  webpack.config.js
node-api/src/: main.js
node-api/src/config/: aws_config.js  firebase.js
node-api/src/modules/: socket.js
node-api/src/routes/: email.js  index.js  pdf.js  user.js
once/: package.json
public/: index.html
public/assets/css/: global.css
public/bootstrap-icons/: package.json
src/: App.vue  main.js
src/android-assets/rodeo-fan.imageset/: Contents.json
src/assets/: config.js
src/assets/icons/: icon.icns
src/components/authentication/: finalStep.vue  loginComponent.vue  signupComponent.vue
src/components/utilities/: input.vue
src/directives/: resizer.js
src/modules/: app.js
src/modules/order/: documents.js
src/modules/request/: broadcaster.js
src/modules/socket-io/: client.js
src/modules/utils/: ip_address.js
src/router/: index.js
src/services/: validation.js
src/store/: index.js
trim-server/: Cargo.toml
trim-server/src/: main.rs
vue-app/: .env  .env.dev  .env.prod  .eslintrc.js  .firebaserc  package-lock.json  package.json  vue.config.js
vue-app/public/: index.html
vue-app/samples/: index.html
vue-app/src/: App.vue  main.js
(+196 files in other folders)
