[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
temp-file = "0.1.7"

actix-web = { version = "4.3.0", default-features = false, features = [
	"macros",
	"compress-brotli",
] }
actix-easy-multipart = "3.0.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
async-process = "1.6.0"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
